fix(question): improve spacing between lines

--- a/src/components/Question/Question.module.css
+++ b/src/components/Question/Question.module.css
@@ -8,7 +8,7 @@
   padding: 0rem;
   margin: 0rem;
   font-size: 34px;
-  line-height: 40px;
+  line-height: 47px;
 }
 .choices {
   display: flex;
