--- a/src/components/Survey/Survey.module.css
+++ b/src/components/Survey/Survey.module.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   width: calc(100% - 44px);
-  height: 80px;
+  height: 59px;
   padding-left: 1.5rem;
   padding-top: 2rem;
   padding-right: 1.5rem;
